--- a/style.css
+++ b/style.css
@@ -192,3 +192,38 @@ header {
   background: rgb(230, 83, 60);
   border-radius: 100%;
 }
+/* habit section css */
+.habit_section {
+  margin: 100px auto;
+}
+.habit_title {
+  color: rgb(255, 255, 255);
+  font-size: 18px;
+  font-weight: 600;
+  margin: 30px 0px 6px;
+  text-align: center;
+}
+
+.habit_section h2,
+.habit_section p {
+  text-align: center;
+}
+.habit_section > p {
+  margin-top: 14px;
+}
+.habit_images {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 40px;
+  margin-top: 58px;
+}
+.habit_image {
+  text-align: center;
+}
+.habit_image p {
+  line-height: 18px;
+}
+
+.habit_image img {
+  border-radius: 100%;
+}
