--- a/style.css
+++ b/style.css
@@ -227,3 +227,62 @@ header {
 .habit_image img {
   border-radius: 100%;
 }
+/* run extra section */
+.run_extra {
+  display: flex;
+  border-radius: 18px;
+  justify-content: center;
+  align-items: center;
+  background: rgb(34, 34, 34);
+  box-sizing: border-box;
+  margin-bottom: 100px;
+  gap: 165px;
+  padding: 32px 32px 32px 54px;
+}
+.run_extra p {
+  line-height: 24px;
+  margin: 14px 0px 34px;
+}
+
+.run_extra img {
+  width: 366px;
+  height: 322px;
+  border-radius: 18px;
+  object-fit: none;
+  object-position: 66% 30%;
+}
+/* services section  */
+.services_container {
+  margin: 80px auto 166px;
+}
+.services_container h2 {
+  margin-bottom: 14px;
+}
+.services {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  margin-top: 48px;
+}
+.service {
+  background-color: rgb(34, 34, 34);
+  color: #fff;
+  display: flex;
+  padding: 32px 24px;
+  justify-content: space-between;
+  gap: 20px;
+  border-radius: 12px;
+  box-shadow: 0 2px 4px rgba(255, 255, 255, 0.2);
+  cursor: pointer;
+}
+.service:hover {
+  /* box-shadow: 0 4px 16px rgba(230, 83, 60, 0.6); */
+  filter: drop-shadow(0 4px 16px rgba(230, 83, 60, 0.6));
+}
+.service_content p {
+  margin: 24px 0px 12px;
+}
+.service_content a {
+  text-decoration: none;
+  color: rgb(230, 83, 60);
+}
