--- a/style.css
+++ b/style.css
@@ -286,3 +286,184 @@ header {
   text-decoration: none;
   color: rgb(230, 83, 60);
 }
+/* trainings section  */
+
+.training_gallery {
+  grid-template-rows: 200px 200px;
+  display: grid;
+  grid-template-columns: repeat(106, 1fr);
+  margin: 60px auto 80px;
+}
+.training_heading p {
+  margin-top: 14px;
+}
+.training_gallery img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: all ease-in-out 0.5s;
+}
+
+.image_1 {
+  position: relative;
+  grid-column: span 25;
+  overflow: hidden;
+}
+
+.image_2 {
+  position: relative;
+  grid-column: span 52;
+  overflow: hidden;
+}
+
+.image_3 {
+  position: relative;
+  grid-column: span 29;
+  overflow: hidden;
+}
+
+.image_4 {
+  position: relative;
+  grid-column: span 42;
+  overflow: hidden;
+}
+
+.image_5 {
+  position: relative;
+  grid-column: span 29;
+  overflow: hidden;
+}
+
+.image_6 {
+  position: relative;
+  grid-column: span 35;
+  overflow: hidden;
+}
+.image_1 .img_overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(6, 255, 210, 0.5);
+  transition: all 0.5s ease-in;
+}
+.img_text {
+  color: rgb(255, 255, 255);
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 17px;
+}
+.image_1 .img_text {
+  position: absolute;
+  bottom: 24px;
+  left: 24px;
+  color: #000;
+}
+.image_2 .img_overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 0, 0, 0.3);
+  transition: all 0.5s ease-in;
+}
+.image_2 .img_text {
+  position: absolute;
+  left: 28px;
+  top: 24px;
+}
+.image_3 .img_overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  transition: all 0.5s ease-in;
+}
+.image_3 .img_text {
+  position: absolute;
+  bottom: 24px;
+  left: 24px;
+}
+.image_4 .img_overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  transition: all 0.5s ease-in;
+}
+.image_4 .img_text {
+  position: absolute;
+  right: 28px;
+  top: 24px;
+}
+.image_5 .img_overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(66, 255, 0, 0.3);
+  transition: all 0.5s ease-in;
+}
+.image_5 .img_text {
+  position: absolute;
+  bottom: 24px;
+  left: 24px;
+}
+.image_6 .img_overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 71, 255, 0.3);
+  transition: all 0.5s ease-in-out;
+}
+.image_6 .img_text {
+  position: absolute;
+  bottom: 24px;
+  left: 28px;
+}
+
+.image_1:hover .img_overlay {
+  background-color: rgba(6, 255, 210, 0);
+}
+.image_1:hover img {
+  transform: scale(1.2);
+}
+.image_2:hover .img_overlay {
+  background-color: rgba(255, 0, 0, 0);
+}
+.image_2:hover img {
+  transform: scale(1.2);
+}
+.image_3:hover .img_overlay {
+  background-color: rgba(0, 0, 0, 0);
+}
+.image_3:hover img {
+  transform: scale(1.2);
+}
+.image_4:hover .img_overlay {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.image_4:hover img {
+  transform: scale(1.2);
+}
+.image_5:hover .img_overlay {
+  background-color: rgba(66, 255, 0, 0);
+}
+.image_5:hover img {
+  transform: scale(1.2);
+}
+.image_6:hover .img_overlay {
+  background-color: rgba(0, 71, 255, 0);
+}
+.image_6:hover img {
+  transform: scale(1.2);
+}
